<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaSeniorFragment">

    <EditText
        android:id="@+id/etDataS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/dataNasc"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeS" />

    <EditText
        android:id="@+id/etBairroS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/bairro"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cbCardiacoS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataS" />

    <EditText
        android:id="@+id/etNomeS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nome"
        app:layout_constraintBottom_toTopOf="@+id/etDataS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbCardiacoS"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="338dp"
        android:text="@string/cardiaco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCadastraS"
        app:layout_constraintTop_toBottomOf="@+id/etBairroS" />

    <Button
        android:id="@+id/btnCadastraS"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="43dp"
        android:text="@string/cadastra"
        app:layout_constraintBottom_toBottomOf="@+id/cbCardiacoS"
        app:layout_constraintEnd_toStartOf="@+id/cbCardiacoS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cbCardiacoS" />

</androidx.constraintlayout.widget.ConstraintLayout>